2010-03-11  Jaroslav Hajek  <highegg@gmail.com>

	* strings/index.m: Make it a wrapper for strfind.

2010-03-11  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strchr.m: Optimize.

2010-03-05  Soren Hauberg  <hauberg@gmail.com>

	* pkg/pkg.m (write_index): include classes in autogenerated INDEX files.

2010-03-05  Soren Hauberg  <hauberg@gmail.com>

	* plot/fplot.m: Ensure that 'limits' is a 2 or 4 vector, and that 'fn' is a
	function.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* testfun/test.m: Support catching warnings and errors by IDs.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumdim.m: Optimize the summation case.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumdim.m: New function.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fzero.m: Avoid division by zero.

2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Fix tests.

2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Fix termination tolerances.

2010-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* polynomial/convn.m: Remove.
	* polynomial/module.mk: Update.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* set/unique.m: If the argument is sparse and we are not
	operating on rows and we don't need indices, convert nonzero
	elements to a full matrix and work on that instead, converting
	back to sparse when done.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* set/unique.m: Return 0x1 arrays for empty arrays with some
	nonzero dimensions.  Return object with the same class as the
	argument.  New tests.

2010-02-27  Liam Groener <liamg@mac.com>

	* /time/datetick.m: Fix 'keepticks' bug, and untabify.

2010-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* strings/str2double.m: Remove.

2010-02-24  John W. Eaton  <jwe@octave.org>

	* plot/private/__contour__.m (get_lvl_eps): New function.
	Handle case of single level value.  Use sqrt (eps) instead of 1e-6.