@@ -1,3 +1,7 @@
+2010-03-16  Jaroslav Hajek  <highegg@gmail.com>
+
+	* miscellaneous/intwarning.m: Deprecate.
+
 2010-03-11  Jaroslav Hajek  <highegg@gmail.com>
 
 	* strings/index.m: Make it a wrapper for strfind.
